tests/multiplatform_dts/multiplatform_dts.exp
Error -------------------------------------------------------------------------------------- conformance.android.js:1:19

Cannot conform to common interface module because in property `foo`: number [1] is incompatible with string [2].
[incompatible-type]

Read the docs on Flow's multi-platform support for more information: https://flow.org/en/docs/react/multiplatform.

   conformance.android.js:1:19
   1| export const foo: number = 1; // ERROR: expected conformance error: number vs string
                        ^^^^^^ [1]

References:
   conformance.d.ts:1:27
   1| declare export const foo: string;
                                ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- missing_impl.d.ts:0:1

Cannot resolve platform-specific implementation module `./missing_impl.android`. All platform-specific implementations
must exist for this interface. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform [cannot-resolve-module]


Error ----------------------------------------------------------------------------------------------- test_import.js:5:1

Cannot cast `f` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   test_import.js:5:1
   5| f as empty; // ERROR
      ^

References:
   test_import.js:3:18
   3| declare const f: typeof foo;
                       ^^^^^^^^^^ [1]
   test_import.js:5:6
   5| f as empty; // ERROR
           ^^^^^ [2]



Found 3 errors
